fixed CSS overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,10 +24,16 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+  overflow: hidden;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.particule {
+  position: absolute;
 }
